Fix tap/scroll issues on mobile

--- a/assets/styles/scss/choices.scss
+++ b/assets/styles/scss/choices.scss
@@ -178,20 +178,19 @@ $choices-button-icon-path: '../../icons/cross.svg';
 }
 
 .choices__button {
+    position: relative;
+    margin: -2px -4px -2px 4px;
+    padding: 4px 6px;    
     text-indent: -9999px;
     -webkit-appearance: none;
     appearance: none;
     border: 0;
+    border-left: 1px solid darken($choices-primary-color, 10%);
     background-color: transparent;
     background-image: url($choices-button-icon-path);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 8px;
-    border-left: 1px solid darken($choices-primary-color, 10%);
-    margin-left: 4px;
-    margin-right: -4px;
-    padding-left: 6px;
-    padding-right: 6px;
     line-height: 1;
     cursor: pointer;
 }
